tests/baselines/reference/annotationDeclarationError9.errors.txt
tests/cases/conformance/annotations/annotationDeclarationError9.ets(5,9): error TS28030: Annotation cannot be renamed in import or export.
tests/cases/conformance/annotations/annotationDeclarationError9.ets(5,9): error TS28039: Annotation can only be exported in declaration statement.


==== tests/cases/conformance/annotations/annotationDeclarationError9.ets (2 errors) ====
    @interface Anno {
        a: number
    }
    
    export {Anno as A}
            ~~~~~~~~~
!!! error TS28030: Annotation cannot be renamed in import or export.
            ~~~~~~~~~
!!! error TS28039: Annotation can only be exported in declaration statement.